--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -20,3 +20,8 @@ protobuf = "1.2"
 rayon = "0.6"
 tensorflow = "0.2"
 rulinalg = "0.4"
+bencher="*"
+
+[[bench]]
+name = "preprocess"
+harness = false
