Rename Cargo project

--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "snips-queries-core"
+name = "queries-core"
 version = "0.1.0"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>", "Kevin Lefevre <kevin.lefevre@snips.ai>"]
 repository = "https://github.com/snipsco/snips-queries-rust/"
-description = """
-Rust implementation of the Queries SDK
-"""
+description = "Rust implementation of the Queries SDK"
 
 [dependencies]
 error-chain = "0.9"
