added steming and brown clusters with packed resources

--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -8,6 +8,7 @@ description = "Rust implementation of the Queries SDK"
 [dependencies]
 queries-utils = { path = "../queries-utils" }
 queries-preprocessor = { path = "../queries-preprocessor" }
+queries-resources-packed = { path = "../queries-resources-packed" }
 crfsuite = { git="ssh://git@github.com/snipsco/crfsuite-rs.git", rev = "50ff9d408d77982f53e5624df131fa2df4374f2d" }
 error-chain = { version = "0.10", default-features = false }
 base64 = "0.5.2"
