--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -10,6 +10,7 @@ queries-utils = { path = "../queries-utils" }
 queries-preprocessor = { path = "../queries-preprocessor" }
 crfsuite = { git="ssh://git@github.com/snipsco/crfsuite-rs.git", rev = "50ff9d408d77982f53e5624df131fa2df4374f2d" }
 error-chain = { version = "0.10", default-features = false }
+base64 = "0.5.2"
 itertools = "0.6"
 fst = "0.1"
 serde = "1.0"
