--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -13,6 +13,7 @@ crfsuite = { git="ssh://git@github.com/snipsco/crfsuite-rs.git", rev = "50ff9d40
 error-chain = { version = "0.10", default-features = false }
 base64 = "0.5.2"
 itertools = "0.6"
+lazy_static = "0.2"
 fst = "0.1"
 serde = "1.0"
 serde_derive = "1.0"
