--- a/queries-resources/Cargo.toml
+++ b/queries-resources/Cargo.toml
@@ -7,4 +7,6 @@ authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 csv = "0.15"
 error-chain = { version = "0.10", default-features = false }
 itertools = "0.6"
+lazy_static = "0.2"
+queries-preprocessor = { path = "../queries-preprocessor" }
 
