--- a/queries-resources-packed/Cargo.toml
+++ b/queries-resources-packed/Cargo.toml
@@ -2,6 +2,7 @@
 name = "queries-resources-packed"
 version = "0.1.0"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
+build = "build.rs"
 
 [dependencies]
 error-chain = { version = "0.10", default-features = false }
