--- a/queries-resources/Cargo.toml
+++ b/queries-resources/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-resources"
-version = "0.10.0"
+version = "0.11.0-SNAPSHOT"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 
 [dependencies]
