fix android aar aarch64 compilation and pom dependencies

--- a/queries-embed/kotlin/build.gradle
+++ b/queries-embed/kotlin/build.gradle
@@ -96,7 +96,7 @@ aar.dependsOn(manifestForAar)
 def soForAar = [
         ["../../target/arm-linux-androideabi/release/libqueries_embed.so", "armeabi"],
         ["../../target/armv7-linux-androideabi/release/libqueries_embed.so", "armeabi-v7a"],
-        ["../../target/aarch64-linux-androideabi/release/libqueries_embed.so", "arm64-v8a"],
+        ["../../target/aarch64-linux-android/release/libqueries_embed.so", "arm64-v8a"],
         ["../../target/i686-linux-android/release/libqueries_embed.so", "x86"],
         ["../../target/x86_64-linux-android/release/libqueries_embed.so", "x86_64"]
 ]
@@ -157,7 +157,7 @@ uploadAarArchives {
             pom.name = "snips-queries-android"
 
             pom.whenConfigured { pom ->
-                pom.dependencies.find { dep -> dep.groupId == 'net.java.dev.jna' && dep.artifactId == 'jna' }.classifier = "aar"
+                pom.dependencies.find { dep -> dep.groupId == 'net.java.dev.jna' && dep.artifactId == 'jna' }.scope = "provided"
             }
         }
     }
