--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "queries-core"
 version = "0.21.0-SNAPSHOT"
-authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>", "Kevin Lefevre <kevin.lefevre@snips.ai>"]
+authors = [
+    "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
+    "Kevin Lefevre <kevin.lefevre@snips.ai>"
+]
 repository = "https://github.com/snipsco/snips-queries-rust/"
 description = "Rust implementation of the Queries SDK"
 
