--- a/queries-embed/Cargo.toml
+++ b/queries-embed/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "queries-embed"
 version = "0.21.0-SNAPSHOT"
-authors = ["Kevin Lefèvre <kevin.lefevre@snips.ai>", "Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
+authors = [
+    "Kevin Lefevre <kevin.lefevre@snips.ai>",
+    "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
+]
 
 [dependencies]
 queries-core = { path = "../queries-core" }
