--- a/queries-embed/kotlin/build.gradle
+++ b/queries-embed/kotlin/build.gradle
@@ -26,6 +26,8 @@ configurations {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'net.java.dev.jna:jna:4.4.0'
+    testCompile 'junit:junit:4.12'
+    testCompile 'com.google.truth:truth:0.34'
 }
 
 def soForJar = [
