--- a/queries-embed/Cargo.toml
+++ b/queries-embed/Cargo.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 
 [dependencies]
-queries-core = { path = "../queries-core" }
+queries-core = { path = "../queries-core", features = ["ffi"] }
 error-chain = { version = "0.10", default-features = false }
 lazy_static = "0.2"
 libc = "0.2"
