--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -9,12 +9,13 @@ repository = "https://github.com/snipsco/snips-queries"
 description = "Rust implementation of the Queries SDK"
 
 [features]
+default = []
 ffi = ["libc"]
 
 [dependencies]
 queries-resources-packed = { path = "../queries-resources-packed" }
 nlu-rust-ontology = { git = "ssh://git@github.com/snipsco/nlu-rust-ontology.git", tag = "0.3.0"}
-crfsuite = { git = "ssh://git@github.com/snipsco/crfsuite-rs.git", rev = "ccb00872" }
+crfsuite = { git = "ssh://git@github.com/snipsco/crfsuite-rs.git", rev = "cb97f3a" }
 rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology/", tag = "0.13.1"}
 nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils.git", tag = "0.4.0"}
 error-chain = { version = "0.10", default-features = false }
