--- a/queries-embed/kotlin/build.gradle
+++ b/queries-embed/kotlin/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.1.2-5'
+    ext.kotlin_version = '1.1.3-2'
     repositories {
         jcenter()
     }
@@ -16,6 +16,12 @@ group = "ai.snips"
 
 repositories {
     jcenter()
+    maven {
+        url "https://nexus-repository.snips.ai/repository/snips-maven-releases/"
+    }
+    maven {
+        url "https://nexus-repository.snips.ai/repository/snips-maven-snapshots/"
+    }
 }
 
 configurations {
@@ -26,6 +32,7 @@ configurations {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     compile 'net.java.dev.jna:jna:4.4.0'
+    compile 'ai.snips:snips-queries-ontology:0.4.0' // make sure we use the same version in rust...
     testCompile 'junit:junit:4.12'
     testCompile 'com.google.truth:truth:0.34'
 }
