--- a/queries-embed/Cargo.toml
+++ b/queries-embed/Cargo.toml
@@ -7,7 +7,8 @@ authors = [
 ]
 
 [dependencies]
-queries-core = { path = "../queries-core", features = [ "ffi" ] }
+queries-core = { path = "../queries-core" }
+snips-queries-ontology = { git = "ssh://git@github.com/snipsco/snips-queries-ontology.git", tag = "0.4.1", features = [ "ffi" ] }
 error-chain = { version = "0.10", default-features = false }
 lazy_static = "0.2"
 libc = "0.2"
