--- a/queries-resources/Cargo.toml
+++ b/queries-resources/Cargo.toml
@@ -8,4 +8,4 @@ csv = "0.15"
 error-chain = { version = "0.11", default-features = false }
 itertools = "0.6"
 lazy_static = "0.2"
-nlu-utils = { git="ssh://git@github.com/snipsco/nlu-utils.git", tag="0.4.0"}
+nlu-utils = { git="ssh://git@github.com/snipsco/nlu-utils.git", tag="language-integration"}
