--- a/queries-embed/Cargo.toml
+++ b/queries-embed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-embed"
-version = "0.27.0-SNAPSHOT"
+version = "0.26.1"
 authors = [
     "Kevin Lefevre <kevin.lefevre@snips.ai>",
     "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
