--- a/queries-resources-packed/Cargo.toml
+++ b/queries-resources-packed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-resources-packed"
-version = "0.29.1"
+version = "0.30.0-SNAPSHOT"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 build = "build.rs"
 
