--- a/queries-resources-packed/Cargo.toml
+++ b/queries-resources-packed/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 [dependencies]
 error-chain = { version = "0.11", default-features = false }
 phf = "0.7.21"
-nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils.git", tag = "0.5.0" }
+nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.0" }
 
 [build-dependencies]
 queries-resources = { path = "../queries-resources"}
