--- a/queries-core/Cargo.toml
+++ b/queries-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-core"
-version = "0.30.0-SNAPSHOT"
+version = "0.30.0"
 authors = [
     "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
     "Kevin Lefevre <kevin.lefevre@snips.ai>"
