--- a/snips-queries/queries-resources-packed/Cargo.toml
+++ b/snips-queries/queries-resources-packed/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "queries-resources-packed"
-version = "0.31.0-SNAPSHOT"
+version = "0.50.0-SNAPSHOT"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 build = "build.rs"
 
 [dependencies]
 error-chain = { version = "0.11", default-features = false }
-phf = "0.7.21"
+phf = { version = "0.7.21", features = ["unicase"] }
 nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }
 
 [build-dependencies]
