--- a/snips-queries/queries-core/Cargo.toml
+++ b/snips-queries/queries-core/Cargo.toml
@@ -16,7 +16,7 @@ rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag 
 nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }
 error-chain = { version = "0.11", default-features = false }
 base64 = "0.7"
-itertools = "0.7"
+itertools = { version = "0.7", default-features = false }
 lazy_static = "0.2"
 serde = "1.0"
 serde_derive = "1.0"
