--- a/snips-queries/queries-resources/Cargo.toml
+++ b/snips-queries/queries-resources/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-resources"
-version = "0.51.0-SNAPSHOT"
+version = "0.51.0"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 
 [dependencies]
