--- a/snips-queries/queries-core/Cargo.toml
+++ b/snips-queries/queries-core/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-core"
-version = "0.51.10"
+version = "0.52.0-SNAPSHOT"
 authors = [
     "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
     "Kevin Lefevre <kevin.lefevre@snips.ai>"
