--- a/snips-queries/queries-embed/python/tox.ini
+++ b/snips-queries/queries-embed/python/tox.ini
@@ -5,12 +5,12 @@ skip_missing_interpreters = true
 [testenv]
 usedevelop = true
 commands =
-    pip install -e . --verbose
+    pip install -e . --verbose --no-cache-dir
     python setup.py bdist_wheel
     python -m unittest discover
 setenv=
     LANG=en_US.UTF-8
     PYTHONIOENCODING=UTF-8
 deps =
-    setuptools_rust==0.8.3
+    setuptools-rust==0.8.3
     wheel==0.30.0
