--- a/snips-queries/queries-core/Cargo.toml
+++ b/snips-queries/queries-core/Cargo.toml
@@ -21,11 +21,11 @@ lazy_static = "1.0"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
-ndarray = "0.10"
+ndarray = "0.11"
 regex = "0.2"
 csv = "0.15"
 yolo = "*"
-zip = { version = "0.2", default-features = false }
+zip = { version = "0.3", features=["deflate"] }
 
 [dev-dependencies]
 bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
