--- a/snips-queries/queries-embed/Cargo.toml
+++ b/snips-queries/queries-embed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-embed"
-version = "0.53.0-SNAPSHOT"
+version = "0.52.3"
 authors = [
     "Kevin Lefevre <kevin.lefevre@snips.ai>",
     "Thibaut Lorrain <thibaut.lorrain@snips.ai>"
