--- a/snips-queries/queries-core/Cargo.toml
+++ b/snips-queries/queries-core/Cargo.toml
@@ -29,6 +29,7 @@ zip = { version = "0.3", features=["deflate"] }
 
 [dev-dependencies]
 bencher = { git = "https://github.com/snipsco/bencher", rev = "63910ace" }
+dinghy-test = { git="ssh://git@github.com/snipsco/dinghy.git", branch="0.3" }
 maplit = "1.0"
 
 [[bench]]
