--- a/snips-queries/queries-embed/kotlin/settings.gradle
+++ b/snips-queries/queries-embed/kotlin/settings.gradle
@@ -1,1 +1,4 @@
 rootProject.name = "snips-queries"
+
+includeBuild '../../../hermes-protocol/platforms/hermes-kotlin/'
+includeBuild '../../../snips-queries-ontology/platforms/snips-queries-ontology-kotlin/'
