--- a/snips-queries/queries-resources-packed/Cargo.toml
+++ b/snips-queries/queries-resources-packed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "queries-resources-packed"
-version = "0.53.0-SNAPSHOT"
+version = "0.53.0-RC0"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 build = "build.rs"
 
