--- a/snips-nlu/snips-nlu-lib/Cargo.toml
+++ b/snips-nlu/snips-nlu-lib/Cargo.toml
@@ -10,7 +10,7 @@ description = "Rust implementation of the Queries SDK"
 
 [dependencies]
 snips-nlu-resources-packed = { path = "../snips-nlu-resources-packed" }
-snips-nlu-ontology = { path = "../../snips-nlu-ontology" }
+snips-nlu-ontology = { git = "ssh://git@github.com/snipsco/snips-nlu-ontology", branch = "develop" }
 crfsuite = { git = "ssh://git@github.com/snipsco/crfsuite-rs", rev = "dc9b595" }
 rustling-ontology = { git = "https://github.com/snipsco/rustling-ontology", tag = "0.15.3" }
 nlu-utils = { git = "ssh://git@github.com/snipsco/nlu-utils", tag = "0.5.1" }
