--- a/snips-nlu/snips-nlu-resources-packed/Cargo.toml
+++ b/snips-nlu/snips-nlu-resources-packed/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 [dependencies]
 error-chain = { version = "0.11", default-features = false }
 phf = { version = "0.7.21", features = ["unicase"] }
-snips-nlu-ontology = { git = "ssh://git@github.com/snipsco/snips-nlu-ontology", branch = "develop" }
+snips-nlu-ontology = { git = "ssh://git@github.com/snipsco/snips-nlu-ontology", rev = "8086bef0" }
 
 [build-dependencies]
 snips-nlu-resources = { path = "../snips-nlu-resources"}
