--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "snips-nlu-resources/snips-nlu-resources"]
 	path = snips-nlu-resources/snips-nlu-resources
-	url = ssh://git@github.com/snipsco/snips-nlu-resources
+	url = https://github.com/snipsco/snips-nlu-resources.git
