--- a/snips-nlu-ffi/python/tox.ini
+++ b/snips-nlu-ffi/python/tox.ini
@@ -1,16 +1,12 @@
 [tox]
 envlist = py27, py34, py35, py36
-skip_missing_interpreters = true
 
 [testenv]
-usedevelop = true
+skip_install = true
 commands =
-    pip install -e . --verbose --no-cache-dir
-    python setup.py bdist_wheel
+    pip install -r requirements.txt
+    pip install -e . --verbose
     python -m unittest discover
 setenv=
     LANG=en_US.UTF-8
     PYTHONIOENCODING=UTF-8
-deps =
-    setuptools-rust==0.8.3
-    wheel==0.30.0
