--- a/snips-nlu-lib/Cargo.toml
+++ b/snips-nlu-lib/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "snips-nlu-lib"
-version = "0.54.0-SNAPSHOT"
+version = "0.54.0"
 authors = [
     "Thibaut Lorrain <thibaut.lorrain@snips.ai>",
     "Kevin Lefevre <kevin.lefevre@snips.ai>"
 ]
-repository = "https://github.com/snipsco/snips-nlu"
-description = "Rust implementation of the Queries SDK"
+repository = "https://github.com/snipsco/snips-nlu-rs"
+description = "Rust implementation of Snips NLU"
 
 [dependencies]
 snips-nlu-resources-packed = { path = "../snips-nlu-resources-packed" }
