--- a/snips-nlu-resources/Cargo.toml
+++ b/snips-nlu-resources/Cargo.toml
@@ -8,4 +8,4 @@ csv = "0.15"
 error-chain = { version = "0.11", default-features = false }
 itertools = { version = "0.7", default-features = false }
 lazy_static = "1.0"
-snips-nlu-utils = { git = "ssh://git@github.com/snipsco/snips-nlu-utils", tag = "0.6.0" }
+snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.0" }
