--- a/snips-nlu-ffi/kotlin/build.gradle
+++ b/snips-nlu-ffi/kotlin/build.gradle
@@ -41,9 +41,9 @@ def buildType = project.hasProperty("debug") ? "debug" : "release"
 println "Using build type $buildType"
 
 def soForJar = [
-        ["../../../target/$buildType/libsnips_nlu.so", com.sun.jna.Platform.RESOURCE_PREFIX, "linuxNative" ],
-        ["../../../target/$buildType/libsnips_nlu.dylib", com.sun.jna.Platform.RESOURCE_PREFIX, "macOsNative" ],
-        ["../../../target/arm-unknown-linux-gnueabihf/$buildType/libsnips_nlu.so", "linux-arm", "linuxArmCross"]
+        ["../../target/$buildType/libsnips_nlu_ffi.so", com.sun.jna.Platform.RESOURCE_PREFIX, "linuxNative" ],
+        ["../../target/$buildType/libsnips_nlu_ffi.dylib", com.sun.jna.Platform.RESOURCE_PREFIX, "macOsNative" ],
+        ["../../target/arm-unknown-linux-gnueabihf/$buildType/libsnips_nlu_ffi.so", "linux-arm", "linuxArmCross"]
 ]
 
 def jarClassifier = {
@@ -107,11 +107,11 @@ task("manifestForAar", type: Copy) {
 aar.dependsOn(manifestForAar)
 
 def soForAar = [
-        ["../../../target/arm-linux-androideabi/$buildType/libsnips_nlu.so", "armeabi"],
-        ["../../../target/armv7-linux-androideabi/$buildType/libsnips_nlu.so", "armeabi-v7a"],
-        ["../../../target/aarch64-linux-android/$buildType/libsnips_nlu.so", "arm64-v8a"],
-        ["../../../target/i686-linux-android/$buildType/libsnips_nlu.so", "x86"],
-        ["../../../target/x86_64-linux-android/$buildType/libsnips_nlu.so", "x86_64"]
+        ["../../target/arm-linux-androideabi/$buildType/libsnips_nlu.so", "armeabi"],
+        ["../../target/armv7-linux-androideabi/$buildType/libsnips_nlu.so", "armeabi-v7a"],
+        ["../../target/aarch64-linux-android/$buildType/libsnips_nlu.so", "arm64-v8a"],
+        ["../../target/i686-linux-android/$buildType/libsnips_nlu.so", "x86"],
+        ["../../target/x86_64-linux-android/$buildType/libsnips_nlu.so", "x86_64"]
 ]
 
 soForAar.forEach {
