--- a/snips-nlu-resources/Cargo.toml
+++ b/snips-nlu-resources/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 
 [dependencies]
 csv = "0.15"
-error-chain = { version = "0.11", default-features = false }
+failure = "0.1"
 itertools = { version = "0.7", default-features = false }
 lazy_static = "1.0"
 snips-nlu-utils = { git = "https://github.com/snipsco/snips-nlu-utils", tag = "0.6.0" }
