Fix issues after renaming package

--- a/snips-nlu-ffi/python/tox.ini
+++ b/snips-nlu-ffi/python/tox.ini
@@ -6,7 +6,7 @@ skipsdist = True
 skip_install = true
 commands =
     pip install -r requirements.txt
-    pip install -e . --verbose
+    pip install -e .
     python -m unittest discover
 setenv=
     LANG=en_US.UTF-8
