--- a/snips-nlu-ffi/python/MANIFEST.in
+++ b/snips-nlu-ffi/python/MANIFEST.in
@@ -1,6 +1,6 @@
-include snips_nlu_rs/__version__
+include snips_nlu_rust/__version__
 include LICENSE README.rst
-recursive-include snips_nlu_rs/dylib/ *
+recursive-include snips_nlu_rust/dylib/ *
 recursive-include snips-nlu-python-ffi/ *
 recursive-exclude snips-nlu-python-ffi/target/ *
 global-exclude __pycache__ *.py[cod]
