--- a/snips-nlu-resources-packed/Cargo.toml
+++ b/snips-nlu-resources-packed/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snips-nlu-resources-packed"
-version = "0.56.0-SNAPSHOT"
+version = "0.55.1"
 authors = ["Thibaut Lorrain <thibaut.lorrain@snips.ai>"]
 build = "build.rs"
 
