--- a/snips-nlu-lib/Cargo.toml
+++ b/snips-nlu-lib/Cargo.toml
@@ -18,6 +18,8 @@ dinghy-test = "0.3"
 failure = "0.1"
 base64 = "0.9"
 itertools = { version = "0.7", default-features = false }
+lazy_static = "1.0"
+lru-cache = "0.1.1"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
