--- a/snips-nlu-cli/Cargo.toml
+++ b/snips-nlu-cli/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "snips-nlu-cli"
-version = "0.58.2"
+version = "0.59.0-SNAPSHOT"
 authors = ["Adrien Ball <adrien.ball@snips.ai>"]
 
 [dependencies]
