--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -10,9 +10,9 @@ authors = [
 ]
 
 [dependencies]
-ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "b1f4af3" }
-snips-nlu-lib = { path = "../snips-nlu-lib" }
-snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", rev = "5fee809" }
+ffi-utils = { git = "https://github.com/snipsco/snips-utils-rs", rev = "4292ad9" }
+snips-nlu-lib = { path = ".." }
+snips-nlu-ontology-ffi-macros = { git = "https://github.com/snipsco/snips-nlu-ontology", branch = "develop" }
 failure = "0.1"
 lazy_static = "1.0"
 libc = "0.2"
